<?xml version="1.0" encoding="utf-8"?>


        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="420dp"
                android:layout_height="286dp"
                android:background="@color/colorLightGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_person_big"
                app:layout_constraintBottom_toTopOf="@+id/fullNameText" />

    <TextView
        android:id="@+id/fullNameText"
        style="@style/TextAppearance.AppTheme.NameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans"
        android:text="@string/first_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="421dp"
        android:layout_height="68dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="28dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/callBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_call"
                android:text="@string/call_button_label"
                android:textColor="@color/colorBlue"
                android:onClick="onCallClick"/>

            <Button
                android:id="@+id/textBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_button_label"
                android:textColor="@color/colorBlue"
                android:onClick="onTextClick"/>

            <Button
                android:id="@+id/emailBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_button_label"
                android:textColor="@color/colorBlue"
                android:onClick="onEmailClick"/>

            <Button
                android:id="@+id/mapBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/directions_button_label"
                android:textColor="@color/colorBlue"
                android:onClick="onMapClick"/>

            <Button
                android:id="@+id/webBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/web_button_label"
                android:textColor="@color/colorBlue"
                android:onClick="onWebClick"/>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/phoneText"
        style="@style/TextAppearance.AppTheme.headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="8dp"
        android:text="@string/phone_field_helper"
        app:layout_constraintBottom_toTopOf="@+id/emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/emailText"
        style="@style/TextAppearance.AppTheme.headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/email_hint"
        app:layout_constraintBottom_toTopOf="@+id/addressText"
        app:layout_constraintEnd_toEndOf="@+id/phoneText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/phoneText"
        app:layout_constraintTop_toBottomOf="@+id/phoneText" />

    <TextView
        android:id="@+id/addressText"
        style="@style/TextAppearance.AppTheme.headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/address_hint"
        app:layout_constraintBottom_toTopOf="@+id/webText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <TextView
        android:id="@+id/webText"
        style="@style/TextAppearance.AppTheme.headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="282dp"
        android:text="@string/website_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/phoneText"
        app:layout_constraintEnd_toStartOf="@+id/phoneText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phoneText"
        app:srcCompat="@drawable/ic_call" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/emailText"
        app:layout_constraintEnd_toStartOf="@+id/emailText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailText"
        app:srcCompat="@drawable/ic_email" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/addressText"
        app:layout_constraintEnd_toStartOf="@+id/addressText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addressText"
        app:srcCompat="@drawable/ic_location_on" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/webText"
        app:layout_constraintEnd_toStartOf="@+id/webText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/webText"
        app:srcCompat="@drawable/ic_web" />
</androidx.constraintlayout.widget.ConstraintLayout>